{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 93,
  "lineage": "47d6d32a-b232-2827-35b9-2c116aa14dcc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "vc-alb-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/vc-alb-tf/5d3ab608d285f9d5",
            "arn_suffix": "app/vc-alb-tf/5d3ab608d285f9d5",
            "dns_name": "vc-alb-tf-43883320.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/vc-alb-tf/5d3ab608d285f9d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vc-alb-tf",
            "security_groups": [
              "sg-085a66b48236747ea"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008ff9d4797e1cb96"
              },
              {
                "subnet_id": "subnet-04d320967084f147d"
              }
            ],
            "subnets": [
              "subnet-008ff9d4797e1cb96",
              "subnet-04d320967084f147d"
            ],
            "tags": {
              "Name": "vc-alb-tf"
            },
            "vpc_id": "vpc-02513ffc6157d751c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.vc_sg_pub_tf",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet2",
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "vc-tg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/vc-tg-tf/60563825b91fcec3",
            "arn_suffix": "targetgroup/vc-tg-tf/60563825b91fcec3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/vc-tg-tf/60563825b91fcec3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vc-tg-tf",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02513ffc6157d751c"
          },
          "dependencies": [
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vc_vpc_igw_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-03b8f28d12d196e02",
            "id": "igw-03b8f28d12d196e02",
            "owner_id": "509130302659",
            "tags": {
              "Name": "vc_vpc_igw_tf"
            },
            "vpc_id": "vpc-02513ffc6157d751c"
          },
          "dependencies": [
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vc-list-alb-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/vc-alb-tf/5d3ab608d285f9d5/5277ce439f98f433",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/vc-tg-tf/60563825b91fcec3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/vc-alb-tf/5d3ab608d285f9d5/5277ce439f98f433",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/vc-alb-tf/5d3ab608d285f9d5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.vc-alb-tf",
            "aws_alb_target_group.vc-tg-tf",
            "aws_security_group.vc_sg_pub_tf",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet2",
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aae56d69f0f7d858",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b8f28d12d196e02",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vc_pub_sn_rt_tf"
            },
            "vpc_id": "vpc-02513ffc6157d751c"
          },
          "dependencies": [
            "aws_internet_gateway.vc_vpc_igw_tf",
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099c59e734a3e9a33",
            "route_table_id": "rtb-0aae56d69f0f7d858",
            "subnet_id": "subnet-008ff9d4797e1cb96"
          },
          "dependencies": [
            "aws_internet_gateway.vc_vpc_igw_tf",
            "aws_route_table.rt-public",
            "aws_subnet.public-subnet",
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e92e64ec311bf29",
            "route_table_id": "rtb-0aae56d69f0f7d858",
            "subnet_id": "subnet-04d320967084f147d"
          },
          "dependencies": [
            "aws_internet_gateway.vc_vpc_igw_tf",
            "aws_route_table.rt-public",
            "aws_subnet.public-subnet2",
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vc-sg_priv_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-050d06d31001803b2",
            "description": "Allow traffic from public subnet for DB servers",
            "egress": [],
            "id": "sg-050d06d31001803b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "vc_sg_priv_tf",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vc_db_sg_tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-02513ffc6157d751c"
          },
          "dependencies": [
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vc_sg_pub_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-085a66b48236747ea",
            "description": "Allow inconming HTTP connections and SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085a66b48236747ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vc_sg_pub_tf",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vc_sg_pub_tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-02513ffc6157d751c"
          },
          "dependencies": [
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-008ff9d4797e1cb96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-008ff9d4797e1cb96",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "tags": {
              "Name": "vc_pub_sn_tf"
            },
            "vpc_id": "vpc-02513ffc6157d751c"
          },
          "dependencies": [
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-04d320967084f147d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04d320967084f147d",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "tags": {
              "Name": "vc_pub2_sn_tf"
            },
            "vpc_id": "vpc-02513ffc6157d751c"
          },
          "dependencies": [
            "aws_vpc.vc_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vc_vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-02513ffc6157d751c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d7d37ddb5583626",
            "default_route_table_id": "rtb-09994ec9221079e3b",
            "default_security_group_id": "sg-07b2a1ebc822d3711",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02513ffc6157d751c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09994ec9221079e3b",
            "owner_id": "509130302659",
            "tags": {
              "Name": "vc_vpc_tf"
            }
          }
        }
      ]
    }
  ]
}